--- a/views/cadastro.hbs
+++ b/views/cadastro.hbs
@@ -93,7 +93,7 @@
                         style="background-color: var(--navbar-background-color); border-radius: 10px;">
                         <img src="/WhatsApp Image 2024-08-22 at 12.39.38.jpeg" width="100" alt="Imagem" class="mb-3">
                         <p style="font-size: medium; color: var(--text-color);">Cadastrar Usuário</p>
-                        <form id="registrationForm" style="width: 100%;" action="/auth/register" method="post">
+                        <form id="registrationForm" style="width: 100%;" action="/auth/registrar" method="post">
                             <!-- campo de nome -->
                             <div class="mb-3">
                                 <i class="bi bi-emoji-laughing"
